Fix zoom issue on mobile devices.

--- a/src/app/components/home-view/home-view.component.scss
+++ b/src/app/components/home-view/home-view.component.scss
@@ -4,5 +4,6 @@
 
   .clr-input {
     width: 100%;
+    font-size: 16px; // used for no-zoom on mobile devices
   }
 }
